polished tutorial content

--- a/tutorial/06. Tailwind.md
+++ b/tutorial/06. Tailwind.md
@@ -4,7 +4,7 @@ If you run `runserver` and take a look at your website, it'll be quite plain and
 
 Let's spice things up with Tailwind.
 
-Add the following into the `head` of your index.html file:
+Add the following into the `head` of your `index.html` file:
 
 ```
 <script src="https://cdn.tailwindcss.com"></script>
@@ -12,7 +12,7 @@ Add the following into the `head` of your index.html file:
 
 Now refresh your page. You'll notice that things look a little different. Tailwind baselines all the styles so you can build up from a good foundation.
 
-Let's add some style. Update your index.html page so it looks like this:
+Let's add some style. Update your `index.html` page so it looks like this:
 
 ```
 <html lang="en">
