--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -14,7 +14,7 @@ To get this right, we'll need to cover a few different things:
 
 ## The Django ORM 
 
-Go to your app's models.py file. It's pretty empty for now. 
+Go to `todos/models.py` file. It's pretty empty for now. 
 
 You'll need to create a model for the thing you are trying to store. Since I'm making a todo list application, mine looks like this:
 
@@ -38,7 +38,7 @@ For the purposes of this tutorial, we'll just make one model. Nothing too fancy.
 
 ## Make a form 
 
-Inside your app, make a new file called `forms.py`. Here you will define a form for creating a new `TodoItem` instance. 
+Inside your todos app, make a new file called `forms.py`. Here you will define a form for creating a new `TodoItem` instance. 
 
 My `forms.py` file looks like this:
 
@@ -69,7 +69,6 @@ def index(request):
     form = forms.CreateTodoForm() # instantiate the form
     context = {"form": form}      # create a context
     return render(request, "todos/index.html", context) # pass the context to the render function
-
 ```
 
 Now we need to get the form to show up on our web page.  To do that we need to update index.html.
@@ -121,6 +120,12 @@ Mine now looks like this:
 </html>
 ```
 
+Now, when you refresh the page, you'll see a form at the bottom of the page:
+
+![Screenshot](images/form.png)
+
+Right now the form doesn't do anything! 
+
 ## Learn more
 
 You'll notice that there is a new div at the bottom that contains the form. And we are doing some weird things like this:
@@ -130,7 +135,7 @@ You'll notice that there is a new div at the bottom that contains the form. And 
 {{ form }}
 ```
 
-Those curly braces and percentage signs are a part of Django's template library. You can learn more here: https://docs.djangoproject.com/en/5.1/topics/templates/
+Those curly braces and percentage signs are a part of Django's template language. You can learn more here: https://docs.djangoproject.com/en/5.1/topics/templates/
 
 The `{% csrf_token %}` line makes sure that a special token is sent to the server when the form is submitted. CSRF Tokens are used to prevent cross site request forgery. You can learn more here: https://docs.djangoproject.com/en/5.1/howto/csrf/ 
 
@@ -152,3 +157,5 @@ There is a simple solution.
 - use the `|crispy` template filter on your forms. 
 
 This is explained in the crispy tailwind docs. 
+
+As long as your website is in light mode then this will yield good results always. So it's worth doing! 
