--- a/tutorial/09. Form submission.md
+++ b/tutorial/09. Form submission.md
@@ -2,7 +2,7 @@
 
 Django's usual pattern for form submission doesn't quite fit what we need. Usually when a form is submitted, a whole page is loaded. 
 
-We want to do some AJAX stuff and make sure that when the form is submitted then we update the DOM without navigating anywhere. 
+We want to do some AJAX stuff and make sure that when the form is submitted then we update the DOM without navigating anywhere.
 
 This is where HTMX comes in.
 
@@ -58,6 +58,8 @@ Now we need to add the view to our app's urls.py file:
 path("action_add_new_todo", views.action_add_new_todo, name="action_add_new_todo"),
 ```
 
+Make sure you add it to the right file! Remember that there are 2 `urls.py` files at this point!
+
 ## Template edits
 
 Now our backend is done. We'll edit index.html
@@ -76,14 +78,14 @@ Start off by including HTMX as a script tag in the head of the page:
 
 Next, we'll need a place to put our items when they show up. We need a dom element to target.
 
-Put something like this in the body of your html:
+Put this in the body of your html:
 
 ```
 <div id="todo_items" />
 ```
 
-Pay special attention to the `id` attribute here. You'll need this value later.
-
+**Pay special attention to the `id` attribute here. You'll need this value later.
+**
 
 Mine ends up looking like this:
 
@@ -116,10 +118,38 @@ Now we need to make sure that when the form is submitted it does the right thing
                 </form>
 ```
 
-Read the HTMX docs to see if you can understand what `hx-post`, `hx-target` and `hx-swap` do.
+Read the (HTMX docs)[https://htmx.org/docs/] to see if you can understand what `hx-post`, `hx-target` and `hx-swap` do.
 
 Try submitting your form and see what it does. 
 
 Kinda ugly, but it looks like it's doing something.
 
-Now, run the tests again.
+![Screenshot](images/first-item.png)
+
+- Submitting the form adds the item to the list
+- The form does not clear
+- The "Nothing to see" message remains
+- If you refresh the page, the list looks empty again
+
+## Tests 
+
+Now, run the tests again. You'll see that one of the tests is failing. We'll fix that next.
+
+## Side Quest 
+
+When you submit the form and a new item is created, then it would be nice if the form cleared. The user experience isn't as good as it could be.
+
+Many would consider this a bug! 
+
+TDD is great for squashing bugs. 
+
+Try this out:
+
+1. Write a test that fails because of the bug 
+2. Then fix the bug so the test passes 
+
+This is a really good way to squash bugs because:
+
+- the bus will not come back. There will not be regressions. The tests become a safety net 
+- if you can demonstrate the bug on the frontend then codegen makes writing the test quite straight-forward
+
