--- a/tutorial/10. Nothing to see here.md
+++ b/tutorial/10. Nothing to see here.md
@@ -40,6 +40,8 @@ Then, in the head of the document, add another script tag:
 
 Now, when you reload the page you should get an alert. If it's not coming through then triple check that you named everything correctly and restart the development server.
 
+![Screenshot](images/alert.png)
+
 ## The Javascript 
 
 If there are items on display, then the "Nothing to see" message should be hidden.
@@ -116,6 +118,8 @@ window.onload = function () {
     };
 
     const observer = new MutationObserver(showOrHideEmptyMessage);
+    // we are watching mutations here so that the same code will work
+    // when we add and delete items 
 
     observer.observe(targetNode, config);
 };
@@ -123,10 +127,13 @@ window.onload = function () {
 
 Re-run your tests and make sure they all pass.
 
-## Disclaimer
+## Pure HTMX approach 
 
-This is not the most graceful piece of code around. It is possible that this can be done in a different way.
+There is more than one way to achieve the same functionality. We approached this with JavaScript, but we can get the code to work by using pure HTMX.
 
-The reason for watching mutations is that I wanted the same code to handle both adding items to the list and deleting them. 
+The way to do it would be to rerender the entire todo item list every time the form is submitted. So, instead of simply appending an item to the `todo_items` div, the whole div would be re-rendered. 
 
-Later on when we delete items, if the last item is deleted we'll want the message to come back.
+The "Nothing to see" message would then be placed inside that div. It would only be rendered if there were no items to display. 
+
+This way of doing things is much simpler to reason about - we simply re-render a part of the page. But it can lead to a lot of extra network traffic if that part of the page is big. It's useful to consider the tradeoffs of different approaches. 
+
