--- a/tutorial/11. R is for Read.md
+++ b/tutorial/11. R is for Read.md
@@ -34,7 +34,7 @@ Of course when we run the test, it will fail.
 
 ## Now to make the tests pass
 
-Head on over to the views.py file.
+Head on over to the `views.py` file.
 
 Add the following import to the top of your file:
 
@@ -57,7 +57,7 @@ Now we need to update the `index.html` template so it renders the items.
 
 Find the element that you were using as the `hx-target` for your form. We're going to put some stuff in there.
 
-Mine looked like this before:
+We had this:
 
 ```
 <div id="todo_items" />
@@ -76,6 +76,8 @@ We can use Django's template language to loop over the items we are passing to t
 
 ```
 
+Note that if you are using a code generating tool such as Copilot, it is very likely to mess this part up and give you strange bugs. Always be intentional about the code you write!
+
 When we run the tests again you'll see that we are still failing because the "nothing to see" message is still showing up. The JavaScript function that shows and hides the message is only called when the element is mutated. 
 
 There are multiple ways to fix this. The easiest is to update your utils.js file:
@@ -92,16 +94,16 @@ window.onload = function () {
 
     observer.observe(targetNode, config);
 
-    showOrHideEmptyMessage();   # NEW LINE
+    showOrHideEmptyMessage();   // NEW LINE
 };
 
 ```
 
 ## This looks terrible
 
-We are now in a good position to add some tailwind style to our list. Let's get things looking good. 
+We are now in a good position to add some Tailwind style to our list. Let's get things looking good. 
 
-My partial now looks like this:
+Play around and see if you can get things to look good. Here is an example of what you might want to do:
 
 ```
 <div
@@ -124,7 +126,7 @@ My partial now looks like this:
 </div>
 ```
 
-And I updated index.html so that there is a small space between the items:
+You can also update index.html so that there is a small space between the items:
 
 ```
 <div id="todo_items" class="space-y-2">
@@ -135,3 +137,7 @@ And I updated index.html so that there is a small space between the items:
     {% endfor %}
 </div>
 ```
+
+## Always be testing! 
+
+Run your tests again, they should still all pass.
