--- a/tutorial/12. U is for Update.md
+++ b/tutorial/12. U is for Update.md
@@ -42,6 +42,7 @@ Go to the partial template and add a testid to the checkbox. Mine looks like thi
 
 Note that the `testid` makes use of the item's database id. so every checkbox will have a unique `testid`.
 
+
 Now if we use `playwright codegen` again, we can poke around and get some code that looks more like this:
 
 ```
@@ -52,7 +53,6 @@ expect(page.get_by_test_id("toggle_item_5")).not_to_be_checked()
 ```
 
 This is much easier to work with.
-
 
 **COMMON PROBLEM** 
 
@@ -165,7 +165,7 @@ Notice that the url itself can contain parameters and wildcards. This let's us s
 
 ## The template 
 
-Now let's update the partial template. We'll add an hx-put attribute to the checkbox:
+Now let's update the partial template. We'll add an `hx-put` attribute to the checkbox:
 
 ```
 hx-put="{% url 'action_toggle_todo' item.id %}"
@@ -197,7 +197,7 @@ There is a bug! Can you see it?
 
 A really great way to fight bugs and prevent regressions is to write a test that exposes the bug and then make the test pass. 
 
-Our bug becomes obvious if we check some boxes and then refresh the page. All the checkboxes remain unchecked. 
+Our bug becomes obvious if we check some boxes and then refresh the page. All the checkboxes remain unchecked! 
 
 ## Writing a test 
 
@@ -230,4 +230,4 @@ Now, to make the test pass, we update the partial template. The checkbox should 
 
 If you get weird template rendering errors it can be because of an autoformatter messing up your template tags. 
 
-Now the test passes!
+Run your tests again, they should pass!
