--- a/tutorial/13. D is for Delete.md
+++ b/tutorial/13. D is for Delete.md
@@ -1,6 +1,6 @@
 # D is for Delete 
 
-This is similar to the last section. We'll be firing off an event when the user clicks a button. There will be a view, it'll need the id of the thing we are deleting. 
+This is similar to the last section. We'll be firing off an event when the user clicks a button. There will be a view, and it will need the id of the thing we are deleting. 
 
 The difference is that we will need to remove the item from the gui once it is deleted.
 
@@ -53,12 +53,6 @@ The url is also quite similar to something we have seen:
 ```
     path("action_delete_todo/<int:item_id>", views.action_delete_todo, name="action_delete_todo"),
 
-```
-
-You will also need to add this import to the top of the file:
-
-```
-from django.http import HttpResponse
 ```
 
 ## The frontend 
