--- a/tutorial/14. Responsive header with Tailwind and Alpine.md
+++ b/tutorial/14. Responsive header with Tailwind and Alpine.md
@@ -48,21 +48,16 @@ Go to your index.html file add add a header area just inside your body tag. Some
 
 Take a moment to style it how you want to.
 
-## Side quest: The downside of locality of behaviour 
+You'll end up with something like this:
 
-Tailwind is lovely. It really really is. But things are looking pretty repetitive and not very DRY. 
+![Screenshot](images/header.png)
 
-You might also notice that the buttons in the header area have a hover effect that is ever so slightly different from the hover effects on the "delete" buttons. This is one of the downsides of locality of behaviour. Code that is not DRY is prone to human error.  In fact, this was originally a mistake, but I left it in to illustrate a point. 
-
-There is a solution to this. If you want to try to implement the solution now you are welcome to.  
-
-The solution I would recommend is to install tailwind "properly" (the cdn we are using is not fit for production use), and then to define new utility classes for things like `button_primary`, `button_secondary` and that sort of thing. It is also useful to set up default styling for different html elements such as `p`, `h1`, `a` etc so you don't need to keep applying the same code.
 
 ## Adding responsiveness 
 
 When users access this page using a large screen, they should see all the menu items lined up. When they use a smaller screen, they should see a menu button. Let's get that done:
 
-We'll wrap the `nav` element in a div with the class `hidden lg:block`. This means that on small screens the nave will be hidden, but on large screens it will be shown. 
+We'll wrap the `nav` element in a div with the class `hidden lg:block`. This means that on small screens the nav will be hidden, but on large screens it will be shown. 
 
 We will then add another div underneath it with the class `block lg:hidden`. This one will be displayed by default, but hidden on larger screens. Inside this second div, add a `button` element and make it clear that it is for expanding the menu.
 
@@ -94,6 +89,10 @@ At this point, the entire header code looks like:
 ```
 
 Take a moment to look at your website. Do the correct elements show and hide as they need to as you change the screen size?
+
+On smaller screens it should look like:
+
+![Screenshot](images/menu-button.png)
 
 ## Hello Alpine.JS
 
@@ -190,5 +189,5 @@ Here are a few things you can do to push your knowledge a little further:
 
 1. See if you can get the menu button to look different depending on whether the menu is open or closed. Maybe use up and down arrows, or change the text on the button, or use icons. 
 
-2. See if you can find a way to make the navigation more DRY. Every menu link is repeated and that is a pain! Can you put the menu items in a data structure and loop over it? Where should you put the data structure?
+2. See if you can find a way to make the navigation more DRY. Every menu link is repeated in the template and that is a pain! Can you put the menu items in a data structure and loop over it? Where should you put the data structure?
 
