--- a/tutorial/15. Tailwind like a pro.md
+++ b/tutorial/15. Tailwind like a pro.md
@@ -1,6 +1,12 @@
 # Tailwind like a pro 
 
-Our HTML classes are looking pretty wild. The code is getting a bit hard to read because the class strings are so long. And things are likely to get quite repetitive as the application gets bigger.  
+Tailwind is lovely. It really really is. But things are looking pretty repetitive and not very DRY. 
+
+You might also notice that the buttons in the header area have a hover effect that is ever so slightly different from the hover effects on the "delete" buttons. This is one of the downsides of locality of behaviour. 
+
+Code that is not DRY is prone to human error.  
+
+On top of that, our HTML classes are looking pretty wild. The code is getting a bit hard to read because the class strings are so long. And things are likely to get even more repetitive and verbose as the application gets bigger.  
 
 Another thing you might have noticed is that when you open up your browser's dev tools (F12 in Chrome) then there is a warning in the console. The warning says: 
 
@@ -10,7 +16,7 @@ cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in pro
 
 None of this is ideal.
 
-We're going to install tailwind "properly" now. 
+The solution is to install Tailwind "properly". 
 
 ## Basic installation 
 
@@ -18,7 +24,7 @@ We are going to install Tailwind using Tailwind's recommended methods. If you lo
 
 You'll need to install `node` if you don't already have it installed. You can read the docs [here](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs). 
 
-Then install tailwind like so:
+Then install Tailwind like so:
 
 ```
 npm install -D tailwindcss
@@ -26,11 +32,11 @@ npm install -D tailwindcss
 
 You'll see a `node_modules` directory in your project directory alongside a few other things. 
 
-**IMPORTANT**: Make sure that `package.json` is in the same directory as your `manage.py` file.
+**IMPORTANT**: Make sure that `package.json` is in the same directory as your `manage.py` file!
 
-Make sure your `.gitignore` file is set up to ignore the `node_modules` directory.
+Make sure your `.gitignore` file is set up to ignore the `node_modules/` directory.
 
-Next up, initialise tailwind:
+Next up, initialise Tailwind:
 
 ```
 npx tailwindcss init
@@ -40,12 +46,12 @@ This will create a `tailwind.config` file.
 
 ## Configure your template paths
 
-The way the tailwind CLI works is:
+The way the Tailwind CLI works is:
 
-- it looks at what tailwind classes you are using in your html files, your tailwind.config file and an input css file (we'll see this later)
+- it looks at what Tailwind classes you are using in your html files, your tailwind.config file and an input css file (we'll see this later)
 - it then outputs a final css file that only includes the stuff you need 
 
-We need to configure tailwind so that it knows where our html files are. We reference tailwind classes from inside our html template files, so we need to tell Tailwind to look at those files.
+We need to configure Tailwind so that it knows where our html files are. We reference Tailwind classes from inside our html template files, so we need to tell Tailwind to look at those files.
 
 Go into your `tailwind.config` file and edit it so the module exports look like this:
 
@@ -68,12 +74,12 @@ yata/todos/static/todos/tailwind_input.css
 Put the following inside the file and save it:
 
 ```
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@Tailwind base;
+@Tailwind components;
+@Tailwind utilities;
 ```
 
-## Build your final tailwind CSS
+## Build your final Tailwind CSS
 
 Now type in this command to build your final css file. 
 
@@ -86,7 +92,7 @@ You will now see `tailwind_output.css` file alongside your `tailwind_input.css` 
 
 ## Update your index.html file 
 
-The next thing we need to do is update `index.html` so that it makes use of our new tailwind output file.
+The next thing we need to do is update `index.html` so that it makes use of our new Tailwind output file.
 
 Get rid of the line that says:
 
@@ -157,7 +163,7 @@ Now you should be able to run the following command:
 npm run tailwind
 ```
 
-This will build your output css and then watch for file changes. When your code changes then tailwind will rebuild the output css.
+This will build your output css and then watch for file changes. When your code changes then Tailwind will rebuild the output css.
 
 ## For now on 
 
@@ -168,7 +174,7 @@ For now on when you run your project you'll need to run 2 commands in 2 terminal
 python manage.py runserver 
 
 # Terminal 2 (don't worry about the virtual env here, it makes no difference)
-npm run tailwind 
+npm run Tailwind 
 ```
 
 ## Renaming colors 
@@ -196,7 +202,7 @@ module.exports = {
 
 ```
 
-There is nothing special about the word `primary` here. We could have called it `screwdriver` if we wanted. And there is nothing special about `colors.orange` either. It's a perfectly normal JavaScript object.
+There is nothing special about the word `primary` here. We could have called it `screwdriver` if we wanted. And there is nothing special about `colors.orange` either. It's a perfectly normal JavaScript object. 
 
 You can now use the word `primary` instead of `orange` in your html files. Eg you could do things like this:
 
@@ -245,9 +251,9 @@ You can generate new color scales using [this tool](https://uicolors.app/create)
 Tailwind is really great for a while, but it can get to a point where the class strings in your HTML become very long and unwieldy. In this case, it it often useful to create your own classes. You do this inside your `tailwind_input.css` file:
 
 ```
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@Tailwind base;
+@Tailwind components;
+@Tailwind utilities;
 
 @layer components {
 
@@ -267,14 +273,15 @@ Eg:
 
 See if you can add more of your own classes. For example, you might want a secondary button that is a different color to the primary button. 
 
+
 ## Sensible default styles
 
 You can also use the tailwind_input.css file to set up default styles for different elements. For example:
 
 ```
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@Tailwind base;
+@Tailwind components;
+@Tailwind utilities;
 
 @layer components {
 
@@ -290,7 +297,7 @@ You can also use the tailwind_input.css file to set up default styles for differ
 
 Now all paragraphs will have large text.
 
-How would you like your links to look? How big should your `h1` headings be? How about `h2`? This is a good place to set up all of that stuff.
+How would you like your links to look? How big should your `h1` headings be? How about `h2`? Do you use lists or tables? This is a good place to set up all of that stuff.
 
 ## Good practice?
 
@@ -303,6 +310,23 @@ You'll usually want to set up styling for paragraphs, headings, lists and anchor
 You'll also likely want some utility classes for different things, for example: `button`, `button_secondary` and whatever else you use often. 
 
 Don't put absolutely everything in this file, only the things that get used across many pages and places. This file should make your code clearer and easier to use, it should not make things unclear or hard to navigate.
+
+
+
+
+## What not to do 
+
+Don't fall into the trap of putting all your styling and class information in this one file. Try to use it for reusable utility classes and defaults only. 
+
+It's useful to know that the classes defined here can be used in conjunction with others. For example:
+
+```
+<a class="button w-full" href="somewhere">A link that looks like a button</a>
+
+<div class="card mt-5">things</div>
+```
+
+So when you create utility classes in your tailwind_input file then it's good to only include the critical information that will come up over and over. 
 
 ## Layout classes 
 
