--- a/tutorial/16. Template inheritance.md
+++ b/tutorial/16. Template inheritance.md
@@ -5,9 +5,9 @@ Currently, your yata app should have 2 templates:
 - index.html 
 - partial_todo_item.html 
 
-These work fine in a small application but, as applications become more complicated, it becomes necessary to organise your templates in better ways. 
+These work fine in a small application but, as applications become more complicated, it becomes necessary to organise templates in better ways. 
 
-There are 2 different techniques we'll go through in this section. 
+There are 2 different techniques we'll go through: 
 
 - template inheritance 
 - template partials 
@@ -32,7 +32,7 @@ In this case we might need a calendar.html file. That file would have a few diff
 
 One might be tempted to make a copy of the index.html page, rename it to `calendar.html` and then change what needs to be changed.
 
-This would work. But the code would not be DRY and that would cause problems down the line. For example, if you needed to add a new header menu item, you would need to go edit every page where the header menu is implemented. 
+This would work. But the code would not be DRY and that would cause problems down the line. For example, if you needed to add a new header menu item, you would need to go edit every page where the header menu is implemented. Or if you wanted to give every page a footer with your copyright and social media links, it would become repetitive.
 
 ### The solution 
 
@@ -45,6 +45,8 @@ In the case of the example above, what we would do is create a base template wit
 - draw the header bar of the page, with the logo and menu items 
 
 Then the index.html template would inherit from the base template and then only implement the todo list CRUD functionality. The calendar.html template would do similar - it would inherit from the base template and then implement only what it needs to.
+
+![Template hierarchy](images/templates.drawio.svg)
 
 ### Let's build a base template 
 
