--- a/tutorial/17. Template partials.md
+++ b/tutorial/17. Template partials.md
@@ -43,3 +43,9 @@ The docs on the `django-template-partials` do a good job of explaining how to do
 
 When you think you are done, run your tests and make sure everything passes.
 
+## Clear structures
+
+Now if you have 5 pages and they each have 5 partials associated with them, those partials will be inside the correct files. They will be in predictable places and you'll know exactly what they are for and where they are used.
+
+If a partial is used in multiple pages then it is useful to put it in a separate file, for example `_common_partials.html`.
+
