--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -70,7 +70,7 @@ You will be adding to this over time as you create more views.
 
 Now we need to wire things up so that the project knows about the new url configuration.
 
-Go to your project's main urls file (also named `urls.py`). It'll already have a bunch of stuff written in there.
+Go to your project's main urls file (at `yata/urls.py`). It'll already have a bunch of stuff written in there.
 
 Edit it so it is more like this:
 
@@ -88,13 +88,15 @@ At this point you should have 2 separate `urls.py` files!
 
 Refresh the webpage and you'll now see your hello-world page.
 
+![Screenshot](images/helloworld.png)
+
 ## Extra resources
 
 You can learn more about url configuration here: https://docs.djangoproject.com/en/5.1/topics/http/urls/
 
 You don't need to be a url configuration ninja to complete this tutorial, but it is nice to be able to see what is available.
 
-## Subquest: renaming your project directory 
+## Side quest: Renaming your project directory 
 
 At this point we have 2 separate directories in our whole project:
 
@@ -112,13 +114,13 @@ At this point we have 2 separate directories in our whole project:
     ...
 ```
 
-This kind of thing can get confusing.
+This kind of thing can get confusing. 
 
 An emerging common practice is to name the "project" directory something different. for example `config` (since it houses the configuration for the entire project) or `core` (for similar reasons).
 
 You are welcome to rename your project directory at any point. There is nothing magical about the name. 
 
-Good code makes its intentions clear, and if you want to choose a different name to make the code more clear then you should do that. 
+**Good code makes its intentions clear**, and if you want to choose a different name to make the code more clear then you should do that. 
 
 For example you might want something like this:
 
@@ -137,4 +139,6 @@ For example you might want something like this:
 ```
 
 Note that you will need to change the name in multiple places. If you change the name of your directory and then try to run `python manage.py runserver` then you will get error messages that will tell you what else you need to fix.
+
+If you are using a code editor such as vscode then you should be able to find all instances of the word "yata" by using the keyboard shortcut: `Ctrl + Shift + F`
 
