--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -18,7 +18,7 @@ playwright install-deps
 playwright install
 ```
 
-## Note
+## Install Pytest
 
 Django uses `unittest` by default. We are going to be using Pytest instead because `pytest-playwright` has a lot of functionality. Writing that functionality ourselves would be a big job.
 
@@ -44,11 +44,29 @@ env =
 
 The `DJANGO_ALLOW_ASYNC_UNSAFE` variable is necessary for Playwright to work with the Django project.
 
-## Test driven development 
+
+Your directory structure should look like:
+
+```
+├── manage.py
+├── pytest.ini
+├── yata
+│   └── ...
+└── todos
+    └── ... 
+```
+
+## Test driven development (TDD)
 
 You have probably heard of Test Driven Development. If you have not then it's the practice of writing your tests before writing your code. At first it will feel a little strange if you are not used to it. Prepare yourself emotionally ;)
 
-## Write a test 
+If you are new to TDD then the general algorithm can be summarised as: RED, GREEN, REFACTOR:
+
+- RED: Write a test. The test should fail because the functionality has not been built yet.
+- GREEN: Write the functionality that makes the test pass 
+- REFACTOR: Now that all the tests pass, refactor the code. It can get messy if you skip this step 
+
+## Write your first test 
 
 In your app directory, do the following:
 
@@ -87,6 +105,10 @@ In our first test we have `url = reverse_url(live_server, "index")`.  This makes
 
 We included the `reverse_url` function in our test file because it was convenient to put it there. Once the app gets a little bigger it would be useful to move the function somewhere else so that it can be re-used.
 
+## Note to PyCharm users
+
+If you are using the PyCharm to to write your code then sometimes it does weird things when you set up Pytest for the first time. If it starts behaving badly then close PyCharm and open it again 😅 
+
 ## Run your tests
 
 ```
@@ -98,6 +120,8 @@ You'll get a failure because of the `NameError`. This means everything is wired 
 Now remove the `NameError` and run the tests again. 
 
 The test takes a little bit of time to run. Why is that? What do you remember about how Playwright works?
+
+(Hint: something about waiting and asynchronous frontends...)
 
 The test will still fail. The next thing we will do is make it pass.
 
@@ -113,7 +137,7 @@ Many people will run this command to create a requirements.txt file:
 pip freeze > requirements.txt
 ```
 
-But this has it's downsides.
+But this has it's downsides. 
 
 Rather:
 
@@ -122,6 +146,8 @@ Use `pip freeze` to see a list of all the installed packages.
 Think back to all the things you installed using `pip install ???`. (Do not type in `pip install ???` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence!)
 
 Look through the output from `pip freeze` and identify the things you explicitly installed. Copy those lines and put them into a new file called `requirements.txt`.
+
+Alternatively, execute `pip freeze > requirements.txt` and remove the lines you don't recognise. 
 
 Mine looks like:
 
