--- a/tutorial/16. Template inheritance.md
+++ b/tutorial/16. Template inheritance.md
@@ -46,7 +46,7 @@ In the case of the example above, what we would do is create a base template wit
 
 Then the index.html template would inherit from the base template and then only implement the todo list CRUD functionality. The calendar.html template would do similar - it would inherit from the base template and then implement only what it needs to.
 
-![Template hierarchy](images/templates.drawio.svg)
+![Template hierarchy](images/templates.png)
 
 ### Let's build a base template 
 
