better markdown formatting

--- a/tutorial/02. Django project set up.md
+++ b/tutorial/02. Django project set up.md
@@ -37,14 +37,14 @@ If you look inside the newly created directory, you'll see something like:
     └── wsgi.py
 ```
 
-- The outer yata/ root directory is a container for your project. You can change the name if you want
+- The outer `yata/` root directory is a container for your project. You can change the name if you want
 - manage.py: A command-line utility that lets you interact with this Django project in various ways. We'll be using this a lot.
-- The inner yata/ directory is the actual Python package for your project. Its name is the Python package name
-- yata/__init__.py: An empty file that tells Python that this directory should be considered a Python package.
-- yata/settings.py: Configuration for this Django project. We'll be editing this file later on
-- yata/urls.py: The URL declarations for this Django project; a “table of contents” of your Django-powered site. We'll be working with this later on
-- yata/asgi.py: An entry-point for ASGI-compatible web servers to serve your project. This is not in scope in this tutorial
-- yata/wsgi.py: An entry-point for WSGI-compatible web servers to serve your project. This is not in scope in this tutorial 
+- The inner `yata/` directory is the actual Python package for your project. Its name is the Python package name
+- `yata/__init__.py`: An empty file that tells Python that this directory should be considered a Python package.
+- `yata/settings.py`: Configuration for this Django project. We'll be editing this file later on
+- `yata/urls.py`: The URL declarations for this Django project; a “table of contents” of your Django-powered site. We'll be working with this later on
+- `yata/asgi.py`: An entry-point for ASGI-compatible web servers to serve your project. This is not in scope in this tutorial
+- `yata/wsgi.py`: An entry-point for WSGI-compatible web servers to serve your project. This is not in scope in this tutorial 
 
 ## Run the application 
 
