added pip compile side quest

--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -126,7 +126,7 @@ For example you might want something like this:
 
 ```
 ├── manage.py
-├── config   <<< changed
+├── config   <<< changed from yata
 │   ├── asgi.py
 │   ├── __init__.py
 │   ├── settings.py
