--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -159,3 +159,28 @@ pytest-django==4.9.0
 pytest-env==1.1.4
 pytest-playwright==0.5.2
 ```
+
+It's important to remember to keep your `requirements.txt` file up to date. Every time you install something new, you'll need to add it to your file. 
+
+This is helpful if you ever want to get your application running on a different computer. You can just run `pip install -r requirements.txt` to install all og the things.
+
+## Side quest: Better dependency management 
+
+When you `pip installed` all your stuff, quite a lot of different dependencies were installed. And all of those dependencies have different version numbers. 
+
+It's good practice to keep track of:
+
+- the things you explicitly installed (that is what we did using `requirements.txt`)
+- all the dependencies and their versions (this is not something we have done)
+
+There are lots and lots of different ways to get this done. One way is by using a thing called `pip-compile`.
+
+Start off by installing pip-tools `pip install pip-tools`.
+
+Next, rename your `requirements.txt` file to `requirements.in`
+
+Last, run `pip-compile`.
+
+This will create a new `requirements.txt` file. Take a look.
+
+It's good to remember that every time you pip install something new it is important to update your `requirements.in` file and recompile your `requirements.txt` file.
