--- a/tutorial/09. Form submission.md
+++ b/tutorial/09. Form submission.md
@@ -150,6 +150,6 @@ Try this out:
 
 This is a really good way to squash bugs because:
 
-- the bus will not come back. There will not be regressions. The tests become a safety net 
+- the bug will not come back. There will not be regressions. The tests become a safety net 
 - if you can demonstrate the bug on the frontend then codegen makes writing the test quite straight-forward
 
