--- a/tutorial/15. Tailwind like a pro.md
+++ b/tutorial/15. Tailwind like a pro.md
@@ -74,9 +74,9 @@ yata/todos/static/todos/tailwind_input.css
 Put the following inside the file and save it:
 
 ```
-@Tailwind base;
-@Tailwind components;
-@Tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 ```
 
 ## Build your final Tailwind CSS
@@ -251,9 +251,9 @@ You can generate new color scales using [this tool](https://uicolors.app/create)
 Tailwind is really great for a while, but it can get to a point where the class strings in your HTML become very long and unwieldy. In this case, it it often useful to create your own classes. You do this inside your `tailwind_input.css` file:
 
 ```
-@Tailwind base;
-@Tailwind components;
-@Tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer components {
 
@@ -279,9 +279,9 @@ See if you can add more of your own classes. For example, you might want a secon
 You can also use the tailwind_input.css file to set up default styles for different elements. For example:
 
 ```
-@Tailwind base;
-@Tailwind components;
-@Tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer components {
 
