Update 08. Test the create form.md | Add info that the Django server must be running

--- a/tutorial/08. Test the create form.md
+++ b/tutorial/08. Test the create form.md
@@ -12,6 +12,8 @@ Execute the following:
 playwright codegen http://127.0.0.1:8000/
 ```
 
+Note: Your Django server must be running for playwright to be able to "attach" to it. So the `playwright codegen` command should be run from another terminal window. 
+
 See if you can get it to generate some useful code for you. You wont be able to get it to do all the things you want it to because some things are not yet implemented, but it'll give you a good starting point.
 
 You want to:
