Update 09. Form submission.md | fix link

--- a/tutorial/09. Form submission.md
+++ b/tutorial/09. Form submission.md
@@ -118,7 +118,7 @@ Now we need to make sure that when the form is submitted it does the right thing
                 </form>
 ```
 
-Read the (HTMX docs)[https://htmx.org/docs/] to see if you can understand what `hx-post`, `hx-target` and `hx-swap` do.
+Read the [HTMX docs](https://htmx.org/docs/) to see if you can understand what `hx-post`, `hx-target` and `hx-swap` do.
 
 Try submitting your form and see what it does. 
 
