--- a/tutorial/11. R is for Read.md
+++ b/tutorial/11. R is for Read.md
@@ -103,7 +103,7 @@ window.onload = function () {
 
 We are now in a good position to add some Tailwind style to our list. Let's get things looking good. 
 
-Play around and see if you can get things to look good. Here is an example of what you might want to do:
+Play around and see if you can get things to look good. Here is an example of what you might want to do in your html partial:
 
 ```
 <div
