--- a/tutorial/14. Responsive header with Tailwind and Alpine.md
+++ b/tutorial/14. Responsive header with Tailwind and Alpine.md
@@ -98,7 +98,7 @@ On smaller screens it should look like:
 
 The next thing we will do is make use of Alpine.js to make the menu button do something. 
 
-First, fo to the `head` of your html file and add this:
+First, go to the `head` of your html file and add this:
 
 ```
 <script src="//unpkg.com/alpinejs" defer></script>
