Update 14. Responsive header with Tailwind and Alpine.md

--- a/tutorial/14. Responsive header with Tailwind and Alpine.md
+++ b/tutorial/14. Responsive header with Tailwind and Alpine.md
@@ -116,7 +116,7 @@ We will need to:
 
 ## Implementation 
 
-The "menu" button is inside a div that is only shown on smaller screens. We need `open to be defined within the scope of that div.
+The "menu" button is inside a div that is only shown on smaller screens. We need `open` to be defined within the scope of that div.
 
 Update the div to look like:
 
