Update 14. Responsive header with Tailwind and Alpine.md | Tiny fix

--- a/tutorial/14. Responsive header with Tailwind and Alpine.md
+++ b/tutorial/14. Responsive header with Tailwind and Alpine.md
@@ -124,9 +124,9 @@ Update the div to look like:
 <div class="block lg:hidden" x-data="{ open: true }">
 ```
 
-NOTE: In Python, boolean values are named `True` and `False`. In Javascript they are named `true` and `false`. We need to use the Javascript names for things here.
+_NOTE:_ In Python, boolean values are named `True` and `False`. In Javascript they are named `true` and `false`. We need to use the Javascript names for things here.
 
-NOTE: We are stating off by setting `open` to `true`. This is a nice way to start because it makes it easier for us to see how the menu looks while we are building it. Once we are happy with the looks we can update the default value so that it starts off closed.
+_NOTE:_ We are starting off by setting `open` to `true`. This is a nice way to start because it makes it easier for us to see how the menu looks while we are building it. Once we are happy with the looks we can update the default value so that it starts off closed.
 
 The next thing we need to do is get the button wired up. Add an `@click` attribute to the menu button like so:
 
