Update 15. Tailwind like a pro.md " | Typo fix

--- a/tutorial/15. Tailwind like a pro.md
+++ b/tutorial/15. Tailwind like a pro.md
@@ -165,9 +165,9 @@ npm run tailwind
 
 This will build your output css and then watch for file changes. When your code changes then Tailwind will rebuild the output css.
 
-## For now on 
+## From now on 
 
-For now on when you run your project you'll need to run 2 commands in 2 terminals: 
+From now on when you run your project you'll need to run 2 commands in 2 terminals: 
 
 ```
 # Terminal 1 (virtual env needs to be active)
