--- a/tutorial/16. Template inheritance.md
+++ b/tutorial/16. Template inheritance.md
@@ -14,16 +14,16 @@ There are 2 different techniques we'll go through:
 
 ## Template inheritance 
 
-The index.html file has a few responsibilities:
+Our index.html file currently has multiple responsibilities:
 
 - it lays out the whole HTML document
 - it defines the head of the document and makes sure htmx, alpinejs and tailwind are included 
 - it draws the header bar of the page, with the logo and menu items 
 - it draws out the todo list and the different CRUD functionality associated with that list 
 
-Our application is quite sime at this point. Let's take a moment to consider a different page. Let's say we wanted to make a page that displayed the todo list items on a calendar so you could see when everything is meant to be done. This is purely hypothetical, we are not going to build this at this point. 
+Our application is quite small at this point. Let's take a moment to consider a different page. Let's say we wanted to make a page that displayed the todo list items on a calendar so you could see when everything is meant to be done. This is purely hypothetical, we are not going to build this at this point. 
 
-In this case we might need a calendar.html file. That file would have a few different responsibilities. It would
+In this case we might need a calendar.html file. That file, again, would have multiple responsibilities. It would
 
 - lay out the whole HTML document
 - define the head of the document and make sure htmx, alpinejs and tailwind are included 
@@ -38,13 +38,13 @@ This would work. But the code would not be DRY and that would cause problems dow
 
 Template inheritance allows you to create a template that contains common functionality and elements, and then use that template as a base for other work. 
 
-In the case of the example above, what we would do is create a base template with the common functionality. The base template would:
+In the case of the example above, what we could do is create a base template with the common functionality. The base template would:
 
 - lay out the whole HTML document
 - define the head of the document and make sure htmx, alpinejs and tailwind are included 
 - draw the header bar of the page, with the logo and menu items 
 
-Then the index.html template would inherit from the base template and then only implement the todo list CRUD functionality. The calendar.html template would do similar - it would inherit from the base template and then implement only what it needs to.
+Then the index.html template would inherit from the base template and only implement the todo list CRUD functionality. The calendar.html template would do similar - it would inherit from the base template and implement only what it needs to enable the calendar functionality.
 
 ![Template hierarchy](images/templates.png)
 
@@ -71,7 +71,7 @@ Add the following line to the start of `index.html`:
 
 Now if you refresh your page it will look like it did before, your todo CRUD functionality will be there as it was originally.
 
-Now, go over to your `_base.html` page and cut (ctrl+x) the stuff that shouldn't be in there, and then paste (ctrl+v) it into the index.html file.
+Now, go over to your `_base.html` page and cut (`ctrl+x` on Windows/Unix, `cmd+x` on macOS) the stuff that shouldn't be in there, and then paste (`ctrl+v` on Windows/Unix, `cmd+v` on macOS) it into the index.html file.
 
 Now when you refresh the page, you'll see the header area but the TODO list functionality wont be there.
 
