Update 17. Template partials.md

--- a/tutorial/17. Template partials.md
+++ b/tutorial/17. Template partials.md
@@ -9,7 +9,8 @@ Imagine how weird things will get if we had 5 pages, and each page had 5 partial
 - your templates directory would be very noisy, it would be hard to know what partial is associated with what page unless you organised your stuff very carefully 
 - you would need to be aware of the organising strategy every time you created a new view function 
 
-If you are working on a project by yourself then this might be fine, but one of the arguments against HTMX is that this kind of complexity doesn't scale well. It has a habit of turning into spaghetti.
+If you are working on a project by yourself then this might be fine, but one of the arguments against HTMX is that this kind of complexity doesn't scale well. 
+There is a danger that all these template files could turn into spaghetti, if you aren't careful.
 
 ## Django template partials saves the day
 
