--- a/tutorial/07. C is for Create.md
+++ b/tutorial/07. C is for Create.md
@@ -55,7 +55,7 @@ class CreateTodoForm(ModelForm):
 
 This is intentionally a very simple form. Our model has a title and a description, but we have decided to make a form that only asks for a title. 
 
-Now go to your views.py file, import your form, and pass it into the render function like so:
+Now go to your `views.py` file, import your form, and pass it into the render function like so:
 
 ```
 from django.shortcuts import render
@@ -71,7 +71,7 @@ def index(request):
     return render(request, "todos/index.html", context) # pass the context to the render function
 ```
 
-Now we need to get the form to show up on our web page.  To do that we need to update index.html.
+Now we need to get the form to show up on our web page.  To do that we need to update `index.html`.
 
 Mine now looks like this:
 
@@ -140,6 +140,14 @@ Those curly braces and percentage signs are a part of Django's template language
 The `{% csrf_token %}` line makes sure that a special token is sent to the server when the form is submitted. CSRF Tokens are used to prevent cross site request forgery. You can learn more here: https://docs.djangoproject.com/en/5.1/howto/csrf/ 
 
 If you open up your browser dev-tools (F12 on chrome) then you should be able to see that there is a hidden form field called `csrfmiddlewaretoken`.
+
+## Understanding all the different files 
+
+If you are new to Django then all the different python modules might be getting confusing. We have `views.py`, `urls.py`, `models.py`, `forms.py` and then there aer also a bunch of template html files... It's a lot!
+
+A picture is worth a thousand words. A picture with a thousand words on it is even better.
+
+![Django concepts](/images/django-concept-map.drawio.svg)
 
 ## Side quest: Bigger form
 
